[metadata]
name = geranslator
version = 1.2.1
description = Translate your translation files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faissaloux/geranslator
author = Faissal Wahabali
author_email = fwahabali@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed
keywords =
    translation
    translation files
    translate
project_urls =
    Source = https://github.com/faissaloux/geranslator
    Documentation = https://geranslator.faissaloux.com
    Author = https://www.faissaloux.com

[options]
packages = find:
install_requires =
    PyYAML==6.0
    packaging==23.0
    polib==1.1.1
    selenium==4.8.0
    termspark==1.3.0
    typer==0.7.0
    types-PyYAML==6.0
    types-polib==1.1.12
    webdriver-manager==3.8.5
python_requires = >=3.7, <4

[options.entry_points]
console_scripts =
    geranslator=geranslator.command_line:main

[options.extras_require]
dev =
    black==23.1.0
    isort==5.11.5
    mypy==0.991
    pre-commit==2.21.0
    pytest==7.2.1
    pytest-cov==4.0.0
    pytest-mock==3.10.0
docs =
    mkdocs==1.4.2
    mkdocs-material==9.0.15
    pymdown-extensions==9.9.2

[options.package_data]
geranslator = .geranslator-config.example, languages/dictionary.yml

[isort]
profile = black
