[metadata]
name = geranslator
version = 2.0.0
description = Translate your translation files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faissaloux/geranslator
author = Faissal Wahabali
author_email = fwahabali@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Typing :: Typed
keywords =
    translation
    translation files
    translate
project_urls =
    Source = https://github.com/faissaloux/geranslator
    Documentation = https://geranslator.faissaloux.com
    Author = https://www.faissaloux.com

[options]
packages = find:
install_requires =
    PyYAML>=6.0.3
    cffi>=2.0.0
    packaging>=25.0
    polib>=1.2.0
    selenium>=4.40.0
    termspark>=3.0.0
    typer>=0.21.0
    types-PyYAML>=6.0
    types-polib>=1.2.0
    webdriver-manager>=4.0.2
python_requires = >=3.10, <3.15

[options.entry_points]
console_scripts =
    geranslator=geranslator.command_line:main

[options.extras_require]
dev =
    black>=26.1.0
    isort>=7.0.0
    mypy>=1.19.0
    pre-commit>=4.5.0
    pytest>=9.0.0
    pytest-cov>=7.0.0
    pytest-mock>=3.15.0
docs =
    mkdocs>=1.6.0
    mkdocs-material>=9.7.1
    pymdown-extensions>=10.20

[options.package_data]
geranslator = .geranslator-config.example, languages/dictionary.yml

[isort]
profile = black
